Tomcat/tomcat/tomcat-deployment.yaml
apiVersion: app/v1
kind: Deployment
metadata:
  name: tomcat-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tomcat
  template:
    metadata:
      labels:
        app: tomcat
    spec:
      containers:
      - name: nginx
        image: jsevans/tomcat-opensuse:latest
        ports:
        - containerPort: 8080
