Tomcat/tomcat/tomcat-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tomcat-service
spec:
  type: LoadBalancer
  ports: 
    - port: 8080
      nodePort: 30001
  selector:
      app: tomcat
