Tomcat/tomcat/tomcat-tsm-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: tomcat
  labels:
    app: tomcat
    service: tomcat
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: tomcat
---


apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat-deployment
  labels:
    app: tomcat
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tomcat
  template:
    metadata:
      labels:
        app: tomcat
    spec:
      containers:
      - name: nginx
        image: jsevans/tomcat-opensuse:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
