Tomcat/tomcat/tomcat-TSM.yaml
apiVersion: v1
kind: Service
metadata:
  name: tomcat-service
  labels:
    app: tomcat
    service: tomcat
spec:
  ports: 
    - name: http-apache
      protocol: TCP
      port: 30001
  selector:
      app: tomcat
      service: tomcat
      
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: tom-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tomcat-tsm
spec:
  hosts:
  - "*"
  gateways:
  - tom-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: tomcat
        port:
          number: 8080
