Tomcat/tomcat/tomcat-tsm-gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: tom-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tomcat-tsm
spec:
  hosts:
  - "*"
  gateways:
  - tom-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: tomcat
        port:
          number: 8080
